# mviz

./: CHANGELOG.MD  README.md  run_hil_libflow.sh  run_hil_mviz.sh  start.sh  start_mviz.sh  version.h
component/TDA4/config/: config_bev2libflow.json  dds2flow.json  dds2flow_simple.json
component/TDA4/lib/: librtosdecmjpeg.so.1.0  librtosdecmjpegV5.so.1.0
component/TDA4/scripts/: config.json  run_bev2libflow.sh  run_dds2flow.sh  run_sim.sh
component/ubuntu20.04/: _locking_task.json  run_hil_mviz.sh  run_hil_ws.sh
component/ubuntu20.04/config/: hil_task_mviz copy.json  hil_task_mviz.json  hil_task_mviz_all copy.json  hil_task_ws.json
component/ubuntu20.04/lib/: libsocketcan.so.2
extensions/TDA4/scripts/: start_mviz_upstream_components_board.sh
extensions/Ubuntu20.04/lib/: libprotobuf.so.23.0.3
extensions/Ubuntu20.04/scripts/: fileCopy.py  log.txt  remoteOrders.py  run_sysinfo.sh
msg/rosMsg/: Angle3f.msg  ApMapResponse.msg  ApaOdometry.msg  ApaStateControl.msg  Box3D.msg  CalibParam.msg  CamID.msg  CameraParam.msg  ColorType.msg  ColorTypeEnum.msg  CornerPt.msg  CurveCoeff.msg  DataSource.msg  DataSourceEnum.msg  EgoMotion.msg  EvalStats.msg  FloatArray.msg  FreeSpaceObstacles.msg  FreeSpaces.msg  FreeZone.msg  FreespaceObstacle.msg  FreespacePoints.msg  FusionRect3D.msg  Junction.msg  JunctionList.msg  Laneline.msg  LanelineList.msg  LanelinePositionType.msg  LanelinePositionTypeEnum.msg  LineState.msg  LineStateEnum.msg  LineType.msg  LineTypeEnum.msg  MeasureType.msg  MeasureTypeEnum.msg  MotionEst.msg  ObjectType.msg  ObjectTypeEnum.msg  ParkSlotType.msg  ParkSlotTypeEnum.msg  (+39 more)
msg/rosmsgcomplier/mviz_apa_show/: Angle3f.h  ApMapResponse.h  ApaOdometry.h  ApaStateControl.h  Box3D.h  CalibParam.h  CamID.h  CameraParam.h  ColorType.h  ColorTypeEnum.h  CornerPt.h  CurveCoeff.h  DataSource.h  DataSourceEnum.h  EgoMotion.h  EvalStats.h  FloatArray.h  FreeSpaceObstacles.h  FreeSpaces.h  FreeZone.h  FreespaceObstacle.h  FreespacePoints.h  FusionRect3D.h  Junction.h  JunctionList.h  Laneline.h  LanelineList.h  LanelinePositionType.h  LanelinePositionTypeEnum.h  LineState.h  LineStateEnum.h  LineType.h  LineTypeEnum.h  MeasureType.h  MeasureTypeEnum.h  MotionEst.h  ObjectType.h  ObjectTypeEnum.h  ParkSlotType.h  ParkSlotTypeEnum.h  (+44 more)
scripts/: build_mviz.sh  burn.sh  docker_env.sh  docker_env_release.sh  pack.sh  start_mviz.sh
scripts/docker_script/: build.sh  make_profiler.sh  start_mviz.sh
src/mviz/: CMakeLists.txt  package.xml
src/mviz/aiplorer.deps/: deps.cmake
src/mviz/common/platform/: j3_platform.hpp  platform_defination.h  platform_interface.hpp  tda4_vm_platform.hpp
src/mviz/common/platform/j3/: j3_defination.h  j3_object_register.h
src/mviz/common/platform/tda4_vm/: apa_vm_defination.h  apa_vm_object_register.h  havp_vm_defination.h  havp_vm_object_register.h
src/mviz/common/video_codec/: codec_inteaface.hpp
src/mviz/config/: byd_body.yaml  can_link_config.yaml  mviz_collect.rviz  mviz_config.json  mviz_replay.rviz  mviz_replay.yaml  x50_body.yaml
src/mviz/core/: CMakeLists.txt
src/mviz/core/collect/: CMakeLists.txt  collect_configman.hpp  collect_dbm.hpp  collect_producer.hpp  collect_recv.hpp  collect_srv.hpp  concurrentqueue.h  file_sys.hpp  file_sys_record.hpp  record_can.cpp  record_can.h  topic_factory.cpp  topic_factory.h  topic_global_object_register.hpp  topic_handle.hpp
src/mviz/core/collect/test/: CMakeLists.txt  nanomsg_send.cpp  record_test.cpp
src/mviz/core/display/: CMakeLists.txt  category_color_mapping.cpp  category_color_mapping.h  display_srv.hpp  flow_data_to_ros.cpp  flow_data_to_ros.h  generate_car_model.cpp  generate_car_model.h  manager_marker.cpp  manager_marker.h  map_engine_marker.cpp  map_engine_marker.h  pb_to_image.hpp  pb_to_rosmsg.hpp  viz_struct.cpp  viz_struct.hpp
src/mviz/core/display_refactor/: CMakeLists.txt  dispaly_base.h  display_base.cpp  gridmap_maker.cpp  gridmap_maker.h  parkingspace_makeker.cpp  parkingspace_makeker.h  register_display_object.hpp
src/mviz/core/display_refactor/test/: CMakeLists.txt  display_test.cpp
src/mviz/core/panel_gui/: CMakeLists.txt  car_state_gui.cpp  car_state_gui.h  interactive_gui.cpp  interactive_gui.h  record_bag_gui.cpp  record_bag_gui.h  uss_radar_gui.cpp  uss_radar_gui.h
src/mviz/core/parking_report/: CMakeLists.txt  parking_report.cpp  parking_report.h
src/mviz/core/replay/: CMakeLists.txt  clickable_slider.cpp  clickable_slider.h  config_editor.cpp  config_editor.h  configuration_manager.cpp  configuration_manager.h  frames_pub_manager.cpp  frames_pub_manager.h  global_value.cpp  global_value.h  l2_types.h  l2data_reader.cpp  l2data_reader.h  log_view_ui.cpp  log_view_ui.h  mviz_tool_box.cpp  mviz_tool_box.h  pystring.h  reader_manager.cpp  reader_manager.h  replay_gui.cpp  replay_gui.h  replay_ui.cpp  replay_ui.h  video_stream_decoder.cpp  video_stream_decoder.h
src/mviz/core/replay/test/: CMakeLists.txt  dt_pystring.cpp  dt_reader_manager.cpp
src/mviz/launch/: mviz_collect.launch  mviz_gdb.launch  mviz_replay.launch
src/mviz/main/: CMakeLists.txt  main.cpp  mviz_inf.cpp  mviz_inf.h
src/mviz/main/test/: CMakeLists.txt  main_test.cpp
src/mviz/plugin_rviz/: plugin_description.xml
src/mviz/utils/: template_factory.hpp  threadpool.hpp  type_conversion.hpp
src/mviz/utils/bev_odom2pix/: bev_car_info.json  bev_pix2odom.cpp  bev_pix2odom.h  point.h
src/mviz/utils/bind_thread_to_cpu/: bind_thread_to_cpu.cpp  bind_thread_to_cpu.h
src/mviz/utils/draw_box/: box3d_vertex.cpp  box3d_vertex.h
src/mviz/utils/performance_analyzer/: performance_analyzer.cpp  performance_analyzer.h
src/mviz/utils/pose/: pose.cpp  pose.h
src/mviz/utils/pose_interpolator/: pose_interpolator.cpp  pose_interpolator.h
src/mviz/utils/rigid_transformer/: BUILD  rigid_transformer.cpp  rigid_transformer.h
tools/: app.list  draw_apa_sys_picture.py  make_flame_graph.sh  test_dds.sh
